--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+const element = document.createElement("div");
 <html>
   <head>
     <title>Creating and Inserting DOM Elements</title>
@@ -6,7 +7,6 @@
   <script type="application/javascript">
   </script>
   <body>
-    <main id="main"></main>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
